# LLMdig

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  env.example
docs/: API.md  DEPLOYMENT.md
examples/: query_examples.sh
scripts/: benchmark.sh  monitor.sh  test.sh
src/: config.rs  dns.rs  error.rs  lib.rs  llm.rs  main.rs  server.rs
src/utils/: cache.rs  encryption.rs  metrics.rs  mod.rs  network.rs  rate_limiter.rs  sanitizer.rs  validation.rs
tests/: integration_tests.rs  unit_tests.rs
tools/: Cargo.toml  README.md  dns_client.rs
