[package]
name = "llmdig"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "LLM over DNS - Query large language models via DNS TXT records"
license = "MIT"
repository = "https://github.com/makalin/LLMdig"
keywords = ["dns", "llm", "ai", "server", "txt"]
categories = ["network-programming", "api-bindings"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
trust-dns-server = "0.23"
trust-dns-proto = "0.23"
trust-dns-rr = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
regex = "1.0"
url = "2.0"
futures = "0.3"
async-trait = "0.1"
config = "0.13"
once_cell = "1.0"
lazy_static = "1.4"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
wiremock = "0.5"
testcontainers = "0.15"

[[bin]]
name = "llmdig"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 