[package]
name = "llmdig-tools"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Tools for LLMdig DNS server"

[[bin]]
name = "dns-client"
path = "dns_client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
trust-dns-proto = "0.23"
rand = "0.8" 